--- a/contact.html
+++ b/contact.html
@@ -11,13 +11,13 @@
   </head>
   <body>
     <header class="header">
-      <div class="container"><a class="header__logo" href="/"><img class="header__logo-icon" src="img/logo.png" alt=""></a><a class="header__tel" href="tel:+1234567890"><img class="header__tel-icon" src="img/tel-icon.svg" alt=""><span>+1 8445 851 422</span></a><a class="header__link" href="/contact.html">Contact</a>
-        <div class="header__separator"></div><a class="header__link" href="/login.html">Login</a><a class="header__link" href="#">Signup</a><a class="header__btn btn" href="#">Post an ad</a>
+      <div class="container"><a class="header__logo" href="index.html"><img class="header__logo-icon" src="img/logo.png" alt=""></a><a class="header__tel" href="tel:+1234567890"><img class="header__tel-icon" src="img/tel-icon.svg" alt=""><span>+1 8445 851 422</span></a><a class="header__link" href="contact.html">Contact</a>
+        <div class="header__separator"></div><a class="header__link" href="login.html">Login</a><a class="header__link" href="#">Signup</a><a class="header__btn btn" href="#">Post an ad</a>
       </div>
     </header>
     <section class="contact">
       <div class="container">
-        <div class="crumbs"><span class="crumbs__text">You are here:</span><a class="crumbs__link" href="/">Home</a><span class="crumbs__current">Login </span></div>
+        <div class="crumbs"><span class="crumbs__text">You are here:</span><a class="crumbs__link" href="index.html">Home</a><span class="crumbs__current">Login </span></div>
         <div class="contact__main">
           <h1 class="contact__title">Contact</h1>
           <h4 class="contact__description"><span>*</span> Required field</h4>
@@ -51,29 +51,29 @@
         <div class="other">
           <h4 class="other__title">Other pages</h4>
           <ul class="other__list">
-            <li class="other__list-item active"><a class="other__list-link" href="/">Main</a></li>
-            <li class="other__list-item"><a class="other__list-link" href="/login.html">Login</a></li>
-            <li class="other__list-item"><a class="other__list-link" href="/404.html">Error 404</a></li>
-            <li class="other__list-item"><a class="other__list-link" href="/soon.html">Comming soon</a></li>
-            <li class="other__list-item"><a class="other__list-link" href="/contact.html">Contact</a></li>
+            <li class="other__list-item active"><a class="other__list-link" href="index.html">Main</a></li>
+            <li class="other__list-item"><a class="other__list-link" href="login.html">Login</a></li>
+            <li class="other__list-item"><a class="other__list-link" href="404.html">Error 404</a></li>
+            <li class="other__list-item"><a class="other__list-link" href="soon.html">Comming soon</a></li>
+            <li class="other__list-item"><a class="other__list-link" href="contact.html">Contact</a></li>
           </ul>
         </div>
       </div>
     </section>
     <footer class="footer">
       <ul class="footer__nav">
-        <li class="footer__nav-item"><a class="footer__nav-link" href="/">Our company</a></li>
-        <li class="footer__nav-item"><a class="footer__nav-link" href="/">Partners</a></li>
-        <li class="footer__nav-item"><a class="footer__nav-link" href="/">Terms of use</a></li>
-        <li class="footer__nav-item"><a class="footer__nav-link" href="/">Privacy policy</a></li>
-        <li class="footer__nav-item"><a class="footer__nav-link" href="/">News</a></li>
-        <li class="footer__nav-item"><a class="footer__nav-link" href="/contact.html">Contact us</a></li>
+        <li class="footer__nav-item"><a class="footer__nav-link" href="index.html">Our company</a></li>
+        <li class="footer__nav-item"><a class="footer__nav-link" href="index.html">Partners</a></li>
+        <li class="footer__nav-item"><a class="footer__nav-link" href="index.html">Terms of use</a></li>
+        <li class="footer__nav-item"><a class="footer__nav-link" href="index.html">Privacy policy</a></li>
+        <li class="footer__nav-item"><a class="footer__nav-link" href="index.html">News</a></li>
+        <li class="footer__nav-item"><a class="footer__nav-link" href="contact.html">Contact us</a></li>
       </ul>
       <ul class="footer__social">
-        <li class="footer__social-item"><a class="footer__social-link" href="/" target="_blanc"><img src="img/social/facebook-icon.svg" alt="facebook"></a></li>
-        <li class="footer__social-item"><a class="footer__social-link" href="/" target="_blanc"><img src="img/social/twitter-icon.svg" alt="twitter"></a></li>
-        <li class="footer__social-item"><a class="footer__social-link" href="/" target="_blanc"><img src="img/social/instagram-icon.svg" alt="instagram"></a></li>
-        <li class="footer__social-item"><a class="footer__social-link" href="/" target="_blanc"><img src="img/social/in-icon.svg" alt="in"></a></li>
+        <li class="footer__social-item"><a class="footer__social-link" href="index.html" target="_blanc"><img src="img/social/facebook-icon.svg" alt="facebook"></a></li>
+        <li class="footer__social-item"><a class="footer__social-link" href="index.html" target="_blanc"><img src="img/social/twitter-icon.svg" alt="twitter"></a></li>
+        <li class="footer__social-item"><a class="footer__social-link" href="index.html" target="_blanc"><img src="img/social/instagram-icon.svg" alt="instagram"></a></li>
+        <li class="footer__social-item"><a class="footer__social-link" href="index.html" target="_blanc"><img src="img/social/in-icon.svg" alt="in"></a></li>
       </ul><img src="img/footer-company.svg" alt="">
       <div class="footer__copy">
         <p>JM MyPlace © All Rights Reserved.</p>
