--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <header class="header">
-      <div class="container"><a class="header__logo" href="/"><img class="header__logo-icon" src="img/logo.png" alt=""></a><a class="header__tel" href="tel:+1234567890"><img class="header__tel-icon" src="img/tel-icon.svg" alt=""><span>+1 8445 851 422</span></a><a class="header__link" href="/contact.html">Contact</a>
-        <div class="header__separator"></div><a class="header__link" href="/login.html">Login</a><a class="header__link" href="#">Signup</a><a class="header__btn btn" href="#">Post an ad</a>
+      <div class="container"><a class="header__logo" href="index.html"><img class="header__logo-icon" src="img/logo.png" alt=""></a><a class="header__tel" href="tel:+1234567890"><img class="header__tel-icon" src="img/tel-icon.svg" alt=""><span>+1 8445 851 422</span></a><a class="header__link" href="contact.html">Contact</a>
+        <div class="header__separator"></div><a class="header__link" href="login.html">Login</a><a class="header__link" href="#">Signup</a><a class="header__btn btn" href="#">Post an ad</a>
       </div>
     </header>
     <section class="first">
@@ -466,18 +466,18 @@
     </section>
     <footer class="footer">
       <ul class="footer__nav">
-        <li class="footer__nav-item"><a class="footer__nav-link" href="/">Our company</a></li>
-        <li class="footer__nav-item"><a class="footer__nav-link" href="/">Partners</a></li>
-        <li class="footer__nav-item"><a class="footer__nav-link" href="/">Terms of use</a></li>
-        <li class="footer__nav-item"><a class="footer__nav-link" href="/">Privacy policy</a></li>
-        <li class="footer__nav-item"><a class="footer__nav-link" href="/">News</a></li>
-        <li class="footer__nav-item"><a class="footer__nav-link" href="/contact.html">Contact us</a></li>
+        <li class="footer__nav-item"><a class="footer__nav-link" href="index.html">Our company</a></li>
+        <li class="footer__nav-item"><a class="footer__nav-link" href="index.html">Partners</a></li>
+        <li class="footer__nav-item"><a class="footer__nav-link" href="index.html">Terms of use</a></li>
+        <li class="footer__nav-item"><a class="footer__nav-link" href="index.html">Privacy policy</a></li>
+        <li class="footer__nav-item"><a class="footer__nav-link" href="index.html">News</a></li>
+        <li class="footer__nav-item"><a class="footer__nav-link" href="contact.html">Contact us</a></li>
       </ul>
       <ul class="footer__social">
-        <li class="footer__social-item"><a class="footer__social-link" href="/" target="_blanc"><img src="img/social/facebook-icon.svg" alt="facebook"></a></li>
-        <li class="footer__social-item"><a class="footer__social-link" href="/" target="_blanc"><img src="img/social/twitter-icon.svg" alt="twitter"></a></li>
-        <li class="footer__social-item"><a class="footer__social-link" href="/" target="_blanc"><img src="img/social/instagram-icon.svg" alt="instagram"></a></li>
-        <li class="footer__social-item"><a class="footer__social-link" href="/" target="_blanc"><img src="img/social/in-icon.svg" alt="in"></a></li>
+        <li class="footer__social-item"><a class="footer__social-link" href="index.html" target="_blanc"><img src="img/social/facebook-icon.svg" alt="facebook"></a></li>
+        <li class="footer__social-item"><a class="footer__social-link" href="index.html" target="_blanc"><img src="img/social/twitter-icon.svg" alt="twitter"></a></li>
+        <li class="footer__social-item"><a class="footer__social-link" href="index.html" target="_blanc"><img src="img/social/instagram-icon.svg" alt="instagram"></a></li>
+        <li class="footer__social-item"><a class="footer__social-link" href="index.html" target="_blanc"><img src="img/social/in-icon.svg" alt="in"></a></li>
       </ul><img src="img/footer-company.svg" alt="">
       <div class="footer__copy">
         <p>JM MyPlace © All Rights Reserved.</p>
